--- a/.github/workflows/buildroot.yml
+++ b/.github/workflows/buildroot.yml
@@ -64,7 +64,7 @@ jobs:
           sudo apt-get autoclean -y >/dev/null 2>&1
           echo "some packages purged"
 
-      - name: Get Disk
+      - name: Get Resources
         run: |
             df -h
             free
